--- a/css/projects.css
+++ b/css/projects.css
@@ -8,3 +8,12 @@ html,body{
     width: 100%;
     height: 100%;
 }
+
+.item_size{
+    display: flex;
+    flex-direction: row;
+}
+.box_size{
+    display: flex;
+    flex-direction: row;
+}
